stderr
TwelveDays.java:15: error: missing return statement
    }
    ^
1 error
